--- a/app/src/main/res/layout/fragment_keranjang.xml
+++ b/app/src/main/res/layout/fragment_keranjang.xml
@@ -32,7 +32,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/kode_voucer"
+            android:id="@+id/tv_kode_voucer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv1" />
 
         <EditText
-            android:id="@+id/nama"
+            android:id="@+id/pt_nama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -53,17 +53,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/kode_voucer" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_kode_voucer" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_produk_keranjang"
+            android:id="@+id/rv_keranjang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/nama"></androidx.recyclerview.widget.RecyclerView>
+            app:layout_constraintTop_toBottomOf="@+id/pt_nama"></androidx.recyclerview.widget.RecyclerView>
 
         <TextView
-            android:id="@+id/subtotal"
+            android:id="@+id/tv_subtotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -72,10 +72,10 @@
             app:layout_constraintEnd_toStartOf="@+id/harga1"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/list_produk_keranjang" />
+            app:layout_constraintTop_toBottomOf="@+id/rv_keranjang" />
 
         <TextView
-            android:id="@+id/diskon"
+            android:id="@+id/tv_diskon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -84,10 +84,10 @@
             app:layout_constraintEnd_toStartOf="@+id/harga2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/subtotal" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_subtotal" />
 
         <TextView
-            android:id="@+id/pengiriman"
+            android:id="@+id/tv_pengiriman"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -96,10 +96,10 @@
             app:layout_constraintEnd_toStartOf="@+id/harga3"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/diskon" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_diskon" />
 
         <TextView
-            android:id="@+id/total"
+            android:id="@+id/tv_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -108,7 +108,7 @@
             app:layout_constraintEnd_toStartOf="@+id/harga4"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pengiriman" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_pengiriman" />
 
         <TextView
             android:id="@+id/harga1"
@@ -118,7 +118,7 @@
             android:layout_marginEnd="16dp"
             android:text="Rp."
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/list_produk_keranjang" />
+            app:layout_constraintTop_toBottomOf="@+id/rv_keranjang" />
 
         <TextView
             android:id="@+id/harga2"
@@ -151,7 +151,7 @@
             app:layout_constraintTop_toBottomOf="@+id/harga3" />
 
         <Button
-            android:id="@+id/beli"
+            android:id="@+id/btn_beli"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
