--- a/app/src/main/res/layout/fragment_reseller_status_verifikasi.xml
+++ b/app/src/main/res/layout/fragment_reseller_status_verifikasi.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.status_pengiriman.StatusPengirimanFragment">
+    tools:context=".ui.reseller_status_verifikasi.ResellerStatusVerifikasiFragment">
 
     <TextView
         android:layout_width="match_parent"
