--- a/app/src/main/res/layout/item_home_produk.xml
+++ b/app/src/main/res/layout/item_home_produk.xml
@@ -8,22 +8,22 @@
     app:cardCornerRadius="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="270dp"
         android:padding="8dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="4dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/iv_card_belanja"
+                android:id="@+id/iv_gambar_produk"
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 tools:srcCompat="@tools:sample/avatars" />
@@ -31,7 +31,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/tv_card_nama"
+            android:id="@+id/tv_nama_produk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -40,13 +40,22 @@
             app:layout_constraintTop_toBottomOf="@+id/card_img" />
 
         <TextView
-            android:id="@+id/tv_card_harga"
+            android:id="@+id/tv_harga_produk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toStartOf="@+id/tv_card_nama"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_nama" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_img" />
+
+        <TextView
+            android:id="@+id/tv_like_produk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="50"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_nama_produk" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
