--- a/app/src/main/res/layout/item_home_produk.xml
+++ b/app/src/main/res/layout/item_home_produk.xml
@@ -4,12 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardElevation="2dp"
-    app:cardCornerRadius="4dp">
+    android:layout_margin="8dp"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="270dp"
+        android:layout_height="match_parent"
+        android:background="?android:attr/selectableItemBackground"
+        android:focusable="true"
+        android:clickable="true"
         android:padding="8dp">
 
         <androidx.cardview.widget.CardView
@@ -24,8 +28,8 @@
 
             <ImageView
                 android:id="@+id/iv_gambar_produk"
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 tools:srcCompat="@tools:sample/avatars" />
 
         </androidx.cardview.widget.CardView>
@@ -34,7 +38,8 @@
             android:id="@+id/tv_nama_produk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/rubik_medium"
             android:text="TextView"
             app:layout_constraintStart_toStartOf="@+id/card_img"
             app:layout_constraintTop_toBottomOf="@+id/card_img" />
@@ -43,7 +48,7 @@
             android:id="@+id/tv_harga_produk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/card_img" />
@@ -52,10 +57,31 @@
             android:id="@+id/tv_like_produk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:text="50"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_nama_produk" />
+
+        <TextView
+            android:id="@+id/tv_preorder_ready_produk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_harga_produk" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="2dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_like_produk"
+            app:layout_constraintStart_toEndOf="@+id/tv_like_produk"
+            app:layout_constraintTop_toTopOf="@+id/tv_like_produk"
+            app:srcCompat="@drawable/icon_like" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
