--- a/app/src/main/res/navigation/mobile_nav.xml
+++ b/app/src/main/res/navigation/mobile_nav.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_nav_graph"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:startDestination="@id/nav_home">
+
+    <action
+        android:id="@+id/global_to_loginFragment"
+        app:popUpTo="@id/main_nav_graph"
+        app:popUpToInclusive="true"
+        app:destination="@id/loginFragment" />
 
     <fragment
         android:id="@+id/nav_home"
@@ -147,12 +154,16 @@
         android:id="@+id/splashScreenFragment"
         android:name="com.rahmacom.rimesyarifix.ui.splash_screen.SplashScreenFragment"
         android:label="fragment_splash_screen"
-        tools:layout="@layout/fragment_splash_screen" >
+        tools:layout="@layout/fragment_splash_screen">
         <action
             android:id="@+id/action_splashScreenFragment_to_loginFragment"
+            app:popUpTo="@id/main_nav_graph"
+            app:popUpToInclusive="true"
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_splashScreenFragment_to_homeFragment"
+            app:popUpTo="@id/main_nav_graph"
+            app:popUpToInclusive="true"
             app:destination="@id/nav_home" />
     </fragment>
 
