--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,6 +32,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="RimeSyariFix.FullScreen" parent="RimeSyariFix.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
     <style name="RimeSyariFix.Preference" parent="PreferenceThemeOverlay">
         <item name="materialAlertDialogTheme">@style/ThemeOverlay.RimeSyariFix.Dialog</item>
     </style>
