--- a/app/src/main/res/layout/fragment_transaksi_riwayat.xml
+++ b/app/src/main/res/layout/fragment_transaksi_riwayat.xml
@@ -6,8 +6,8 @@
     tools:context=".ui.transaksi_riwayat.TransaksiRiwayatFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_fragment_transaksi_riwayat"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
