--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -70,6 +70,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="center"
+        android:layout_marginTop="8dp"
         android:translationZ="24dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/btn_login"
