--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -28,8 +28,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
+        android:hint="Username..."
         android:inputType="textPersonName"
-        android:hint="Nama Lengkap..."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline6" />
@@ -41,8 +41,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:inputType="phone"
-        android:hint="Nomor Handphone"
+        android:hint="Email..."
+        android:inputType="none|textWebEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_register_nama_lengkap" />
@@ -73,7 +73,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_register_password" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_register_daftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -110,5 +110,17 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.7" />
+
+    <ProgressBar
+        android:id="@+id/pb_register_loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:translationZ="24dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_register_daftar"
+        app:layout_constraintEnd_toEndOf="@+id/btn_register_daftar"
+        app:layout_constraintStart_toStartOf="@+id/btn_register_daftar"
+        app:layout_constraintTop_toTopOf="@+id/btn_register_daftar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
