--- a/app/src/main/res/layout/item_home_produk.xml
+++ b/app/src/main/res/layout/item_home_produk.xml
@@ -36,11 +36,12 @@
 
         <TextView
             android:id="@+id/tv_nama_produk"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/rubik_medium"
             android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/card_img"
             app:layout_constraintTop_toBottomOf="@+id/card_img" />
 
@@ -48,20 +49,20 @@
             android:id="@+id/tv_harga_produk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="4dp"
             android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_img" />
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/tv_nama_produk"
+            app:layout_constraintTop_toBottomOf="@+id/tv_nama_produk" />
 
         <TextView
             android:id="@+id/tv_like_produk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="50"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_nama_produk" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tv_preorder_ready_produk"
