--- a/app/src/main/res/layout/fragment_reseller_kyc.xml
+++ b/app/src/main/res/layout/fragment_reseller_kyc.xml
@@ -12,33 +12,32 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_take_photo"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_margin="10dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
             android:src="@drawable/ic_menu_camera"
-            app:cornerRadius="50dp"
-            app:iconTint="@color/black"
-            app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            app:iconSize="35dp"
+            android:background="#00000000"
+            app:iconTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_switch_camera"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_margin="10dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="24dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
-            app:cornerRadius="50dp"
+            android:background="#00000000"
+            app:iconTint="@color/white"
+            app:elevation="0dp"
             app:icon="@drawable/ic_baseline_flip_camera_ios_24"
             app:iconGravity="textStart"
             app:iconPadding="0dp"
