--- a/app/src/main/res/layout/fragment_keranjang.xml
+++ b/app/src/main/res/layout/fragment_keranjang.xml
@@ -168,7 +168,7 @@
         android:id="@+id/layout_isi_keranjang_kosong"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <TextView
             android:id="@+id/tv_text"
