--- a/app/src/main/res/layout/dialog_biodata.xml
+++ b/app/src/main/res/layout/dialog_biodata.xml
@@ -18,7 +18,7 @@
         android:ems="10"
         android:hint="ubah alamat"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="ubah alamat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
