--- a/app/src/main/res/layout/fragment_profil_biodata_alamat.xml
+++ b/app/src/main/res/layout/fragment_profil_biodata_alamat.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.profil_biodata_alamat.ProfilBiodataAlamatFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_profil_biodata_alamat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
