--- a/app/src/main/res/layout/fragment_profil_biodata.xml
+++ b/app/src/main/res/layout/fragment_profil_biodata.xml
@@ -39,4 +39,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Anda bisa menetapkan alamat pengiriman yang tersimpan di pengaturan"
+        android:textAlignment="viewStart"
+        android:textColor="@color/gray_600"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/rv_biodata_profil"
+        app:layout_constraintStart_toStartOf="@+id/rv_biodata_profil"
+        app:layout_constraintTop_toBottomOf="@+id/rv_biodata_profil" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
